# GameProgramming23

./: .gitignore  CMakeLists.txt  LICENSE
GameProgramming23/Ex3/: CMakeLists.txt  README.txt
GameProgramming23/Ex3/Exercise3/: Game.cpp  a.out  main.cpp
GameProgramming23/Ex3/Exercise3/Classes/: Engine.cpp  GameManager.cpp  GameObject.cpp  Map.cpp  Player.cpp  Score.cpp
GameProgramming23/Ex3/Exercise3/Headers/: Asteroids.h  Constants.h  Engine.h  GameManager.h  GameObject.h  Map.h  Player.h  Score.h
GameProgramming23/Exercise10/Engine/Engine/Components/: ComponentRendererSprite.cpp  ComponentRendererSprite.h
GameProgramming23/Exercise10/ExampleGame/Game/: ComponentController.cpp  ComponentController.h  ComponentPlatform.cpp  ComponentPlatformMove.cpp  ComponentPlatformMove.h  ComponentSpline.cpp  ComponentSpline.h
GameProgramming23/Exercise10/ExampleGame/data/: scene.json
GameProgramming23/Exercise4/: CMakeLists.txt
GameProgramming23/Exercise4/Asteroids/: CMakeLists.txt  main.cpp
GameProgramming23/Exercise4/Asteroids/Factory/: Factory.cpp  Factory.h
GameProgramming23/Exercise4/Asteroids/Game/Asteroid/: AsteroidRenderComponent.cpp  AsteroidRenderComponent.h  AsteroidUpdateComponent.cpp  AsteroidUpdateComponent.h
GameProgramming23/Exercise4/Asteroids/Game/AsteroidSpawner/: AsteroidSpawner.cpp  AsteroidSpawner.h
GameProgramming23/Exercise4/Asteroids/Game/Constants/: Engine.h  Player.h
GameProgramming23/Exercise4/Asteroids/Game/Enums/: AsteroidSpawnerPositions.h
GameProgramming23/Exercise4/Asteroids/Game/GameManager/: GameManager.cpp  GameManager.h
GameProgramming23/Exercise4/Asteroids/Game/Laser/: BulletComponentRender.cpp  BulletComponentRender.h  BulletComponentUpdate.cpp  BulletComponentUpdate.h
GameProgramming23/Exercise4/Asteroids/Game/Player/: PlayerComponentInput.cpp  PlayerComponentInput.h  PlayerComponentRenderer.cpp  PlayerComponentRenderer.h  PlayerProcessEventsComponent.cpp  PlayerProcessEventsComponent.h  PlayerUpdateComponent.cpp  PlayerUpdateComponent.h
GameProgramming23/Exercise4/Asteroids/data/: asteroids_sprites.json
GameProgramming23/Exercise4/Asteroids/gamedata/: gamedata.json
GameProgramming23/Exercise4/Asteroids/rapidjson/: gamedata.json
GameProgramming23/Exercise4/Engine/: CMakeLists.txt
GameProgramming23/Exercise4/Engine/Engine/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  MyEngine.cpp  MyEngine.h
GameProgramming23/Exercise4/ExampleGame/: main.cpp
GameProgramming23/Exercise6/Engine/: CMakeLists.txt
GameProgramming23/Exercise6/Engine/Engine/: ComponentFactory.h  GameObject.cpp  GameObject.h  MyEngine.cpp  MyEngine.h
GameProgramming23/Exercise6/ExampleGame/: CMakeLists.txt  main.cpp
GameProgramming23/Exercise6/ExampleGame/Game/: ComponentCamera.cpp  ComponentController.cpp  ComponentController.h  ComponentRendererMesh.cpp  ComponentRendererMesh.h
GameProgramming23/Exercise6/ExampleGame/Game/GameManager/: GameManager.cpp  GameManager.h
GameProgramming23/Exercise6/ExampleGame/Game/LevelLayoutManager/: LevelLayoutManager.cpp  LevelLayoutManager.h
GameProgramming23/Exercise6/ExampleGame/costants/: Costants.h
GameProgramming23/Exercise6/ExampleGame/data/: scene.json
GameProgramming23/Exercise8/Engine/: CMakeLists.txt
GameProgramming23/Exercise8/Engine/Engine/: GameObject.h  MyEngine.cpp  MyEngine.h
GameProgramming23/Exercise8/Engine/Engine/Components/: ComponentPhysicsBody.cpp  ComponentPhysicsBody.h
GameProgramming23/Exercise8/ExampleGame/: CMakeLists.txt  main.cpp
GameProgramming23/Exercise8/ExampleGame/Game/: ComponentBackground.cpp  ComponentBackground.h  ComponentController.cpp  ComponentController.h  ComponentSpawner.cpp  ComponentSpawner.h
lessons/: lessons3DRendering.txt  physics.txt
project/: sdl2_mixer-example.cpp
